# turboquant-mlx-qwen35-kv

./: README.md  pyproject.toml
benchmarks/: baseline_1024_8.json  baseline_128_8.json  baseline_128_8_trials3.json  baseline_128_8_trials3_wall.json  baseline_2048_8.json  baseline_2048_8_trials3.json  baseline_4096_8.json  benchmark_128_8.json  benchmark_32_4.json  mlx_quant_1024_8.json  mlx_quant_128_8.json  mlx_quant_128_8_trials3.json  mlx_quant_128_8_trials3_wall.json  mlx_quant_2048_8.json  mlx_quant_2048_8_trials3.json  mlx_quant_4096_8.json  summary_128_8.json  turboquant_1024_8.json  turboquant_128_8.json  turboquant_128_8_trials3.json  turboquant_128_8_trials3_wall.json  turboquant_2048_8.json  turboquant_2048_8_trials3.json  turboquant_4096_8.json
tests/: test_generation.py  test_packing.py
turboquant_mlx/: __init__.py  attention.py  benchmark.py  cache.py  cli.py  generation.py  loaders.py  packing.py  projection.py  runtime.py
